# quchip

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHYSICS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.rst  conf.py  cookbook.md  index.md  physics.md  wrangler.jsonc
docs/examples/: hello-chip.md
examples/: 00_hello_chip.md
quchip/: __init__.py  sweep.py
quchip/analysis/: __init__.py  cross_resonance.py  dispersive_readout.py  effective_hamiltonian.py
quchip/backend/: __init__.py  _dims.py  containers.py  dynamiqs.py  protocol.py  qutip.py
quchip/chip/: __init__.py  analysis.py  baths.py  chip.py  coupling_base.py  couplings.py  describe.py  dressing.py  observables.py  partition.py  retarget.py  rwa.py  serialization.py  states.py  sw.py
quchip/control/: __init__.py  batch.py  drive.py  envelopes.py  (+5 more)
tests/: conftest.py  test_active_patch.py  test_analysis_cross_resonance.py  test_auto_config.py  test_backend.py  test_backend_dynamiqs_contract.py  test_backend_hamiltonian_prep.py  test_backend_max_step.py  test_backend_selection.py  test_backend_switching.py  test_baths.py  test_charge_basis_transmon.py  test_chip.py  test_chip_coupling_map.py  test_circuit_device.py  test_convenience.py  test_crosstalk_matrix.py  test_declarative_coupling_compile.py  test_declarative_envelope_duration.py  test_declarative_expr.py  test_declarative_models.py  test_declarative_models_pytree.py  test_declarative_parameters.py  test_declarative_parameters_ordering.py  test_declarative_traceability.py  test_declarative_write_validation.py  test_describe.py  test_device_protocols.py  test_dims.py  test_dispersive_readout.py  test_domain.py  test_dressed.py  test_drive_protocol_dispatch.py  test_e_ops_builder.py  test_effective_hamiltonian.py  test_eliminate_describe.py  test_eliminate_dispatch.py  test_engine_validation.py  test_envelopes.py  test_example_00.py  (+43 more)
tools/: gen_device_stubs.py
(+208 files in other folders)
