[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quchip"
dynamic = ["version"]
description = "Superconducting quantum device simulation toolkit"
authors = [{name = "Ibraheem AlYousef", email = "ibraheem@quchip.org"}]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "qutip>=5.0",
    "scipy",
    "matplotlib",
    "tqdm",
    "loky",
    "jax",
    "optax",
]

[project.optional-dependencies]
dynamiqs = ["dynamiqs>=0.3.4"]
viz = ["pyvis"]
scqubits = ["scqubits>=4.2,<5.0"]
test = ["pytest", "pyvis", "scqubits>=4.2,<5.0", "jupytext", "nbconvert", "ipykernel"]
dev = ["ruff", "mypy", "pytest", "pyvis", "jupytext", "nbconvert", "ipykernel"]
docs = ["sphinx", "furo", "myst-parser", "sphinx-copybutton"]

[project.urls]
Homepage = "https://quchip.org"
Documentation = "https://docs.quchip.org"
Repository = "https://github.com/quchip/quchip"
Issues = "https://github.com/quchip/quchip/issues"
Paper = "https://arxiv.org/abs/2607.17081"

[tool.setuptools.dynamic]
version = {attr = "quchip.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "core: fast analytical and API-contract coverage for the default developer loop",
    "physics_sentinel: compact simulation-backed regression coverage for critical physics invariants",
    "extended: slower long-tail coverage outside the default developer loop",
    "optional_backend: tests that require the dynamiqs optional backend",
    "viz: visualization coverage",
]

[tool.setuptools.packages.find]
include = ["quchip*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
disable_error_code = ["empty-body"]
